--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,15 @@
-# Use root/example as user/password credentials
-version: '3.1'
+version: '3.8'
 
 services:
-  db:
-    image: mysql
-    restart: always
-    environment:
-      MYSQL_ROOT_PASSWORD: 
-
-
+  nestjs:
+    build: .
     ports:
-      - 3306:3306
+      - "3000:3000"
+    environment:
+      MYSQL_HOST: localhost  # Use localhost to connect to MySQL running on host
+      MYSQL_PORT: 3306
+      MYSQL_USER: root
+      MYSQL_PASSWORD: 
+      MYSQL_DATABASE: stundents
+
+  # Remove the MySQL service since we're using localhost
