--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,43 +1,4 @@
-# version: '3.8'
-# services:
-#   nestjs:
-#     build: .
-#     ports:
-#       - "3001:3000"
-#     environment:
-#       MYSQL_HOST: db
-#       MYSQL_PORT: 3306
-#       MYSQL_USER: root
-#       MYSQL_PASSWORD: ''
-#       MYSQL_DATABASE: students
-#     depends_on:
-#       - db
-#     networks:
-#       - app-network
-#     entrypoint: ["/app/wait-for-it.sh", "db:3306", "--", "npm", "run", "start:dev"]
-
-#   db:
-#     image: mysql:5.7
-#     environment:
-#       MYSQL_ROOT_PASSWORD: ""  # Mot de passe vide pour root
-#       MYSQL_ALLOW_EMPTY_PASSWORD: "yes"  # Permet les mots de passe vides
-#       MYSQL_DATABASE: students
-#     ports:
-#       - "3307:3306"
-#     networks:
-#       - app-network
-#     volumes:
-#       - mysql-data:/var/lib/mysql  # Volume persistant pour les données
-
-# networks:
-#   app-network:
-#     driver: bridge
-
-# volumes:
-#   mysql-data:  # Définition du volume persistant
-#     driver: local
-
-
+version: '3.8'
 
 services:
   nestjs:
@@ -49,12 +10,17 @@ services:
       MYSQL_PORT: 3306
       MYSQL_USER: root
       MYSQL_PASSWORD: ''
-      MYSQL_DATABASE: stundents
+      MYSQL_DATABASE: stundents # Vérifie bien ce nom
+      RABBITMQ_URL: amqp://user:password@rabbitmq
     depends_on:
-      - db
+      db:
+        condition: service_healthy
+      rabbitmq:
+        condition: service_healthy
     networks:
       - app-network
-    entrypoint: ["dockerize", "-wait", "tcp://db:3306", "-timeout", "60s", "npm", "run", "start:dev"]
+    restart: always
+    entrypoint: ["dockerize", "-wait", "tcp://db:3306", "-wait", "tcp://rabbitmq:5672", "-timeout", "60s", "npm", "run", "start:dev"]
 
   db:
     image: mysql:5.7
@@ -66,8 +32,32 @@ services:
       - "3307:3306"
     networks:
       - app-network
+    restart: always
     volumes:
       - mysql-data:/var/lib/mysql
+    healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
+      interval: 10s
+      retries: 5
+      start_period: 10s
+
+  rabbitmq:
+    image: rabbitmq:3-management
+    container_name: rabbitmq
+    ports:
+      - "5672:5672"   # Port AMQP pour la communication entre services
+      - "15672:15672" # Interface Web de gestion RabbitMQ
+    environment:
+      RABBITMQ_DEFAULT_USER: user
+      RABBITMQ_DEFAULT_PASS: password
+    networks:
+      - app-network
+    restart: always
+    healthcheck:
+      test: ["CMD", "rabbitmqctl", "status"]
+      interval: 10s
+      retries: 5
+      start_period: 10s
 
 networks:
   app-network:
@@ -76,4 +66,3 @@ networks:
 volumes:
   mysql-data:
     driver: local
-
