--- a/package.json
+++ b/package.json
@@ -21,13 +21,18 @@
   },
   "dependencies": {
     "@nestjs/cache-manager": "^2.3.0",
-    "@nestjs/common": "^9.0.0",
+    "@nestjs/common": "^11.0.0",
     "@nestjs/config": "^3.0.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/jwt": "^10.1.0",
+    "@nestjs/microservices": "^11.0.9",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/platform-socket.io": "^11.0.9",
     "@nestjs/swagger": "^7.3.1",
     "@nestjs/typeorm": "^10.0.0",
+    "@nestjs/websockets": "^11.0.9",
+    "amqp-connection-manager": "^4.1.14",
+    "amqplib": "^0.10.5",
     "bcrypt": "^5.1.0",
     "cache-manager": "^5.7.6",
     "class-transformer": "^0.5.1",
